--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: demo
+name: my_first_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  http: ^1.1.0
+  flutter_spinkit: ^5.2.0
+  shared_preferences: ^2.5.3
+  flutter_svg: ^2.2.1
 
 dev_dependencies:
   flutter_test:
